--- a/index.html
+++ b/index.html
@@ -7984,7 +7984,27 @@ Then, call the library:</p>
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=7897a279-e9c1-4aa3-9459-310e03647083">
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=b50bc5f6-7d5d-4a90-bf30-ec0cd2e9aaac">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<div class="alert-success">
+<p><strong>Exercise: Choosing a country for a Master Program</strong></p>
+<ul>
+<li>Join 3 or 4 people from this course (or other friends if needed).</li>
+<li>If you have the criteria: cost of living, language difficulty, possibilities to get a job in that country</li>
+<li>If you have the alternatives: Brazil, Spain, USA, England, France</li>
+<li>Create an AHP model and get the ranking.</li>
+</ul>
+<p>You can follow this <a href="https://en.wikipedia.org/wiki/Analytic_hierarchy_process_%E2%80%93_leader_example">example</a>.
+If you have a better idea, you can use it instead.</p>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=c6a73683-487e-4304-b465-c3d1c509999f">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -7999,6 +8019,6 @@ Then, call the library:</p>
 </div>
 </div>
 </div>
-</div></main>
+</div></div></main>
 </body>
 </html>
